<resources>
    <string name="app_name">Classify</string>
    <string name="signUpButton">SignUp</string>
    <string name="password">Password</string>
    <string name="e_mail">e-mail</string>
    <string name="school">School</string>
    <string name="university_name">University Name</string>
    <string name="college_name">College Name</string>
    <string name="year_of_joining">Year of Joining</string>
    <string name="degree">Degree</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_degree">Select Degree</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="university">University</string>
    <string name="end_year">End Year</string>
    <string name="start_year">Start Year</string>
    <string name="to">to</string>
    <string name="semester">Semester</string>
</resources>
