<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pronoymukherjee.classify.Activities.SignUpActivity">

    <android.support.v7.widget.AppCompatEditText

        android:id="@+id/email"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/emailicon"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordicon"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/passwordicon"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginBottom="348dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

    <android.support.v7.widget.AppCompatEditText

        android:id="@+id/password"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginBottom="348dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" />



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="198dp"
        android:id="@+id/signUpButton"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"

        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.031" />
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/signupwithlinkedin"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupwithgoogle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_dialog" />
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/signupwithfacebook"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:srcCompat="@android:drawable/btn_dialog" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/signupwithgoogle"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupwithfacebook"
        app:srcCompat="@android:drawable/btn_dialog" />
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/signupwithtwitter"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupwithlinkedin"
        app:srcCompat="@android:drawable/btn_dialog" />

</android.support.constraint.ConstraintLayout>
